--- a/styles/style.css
+++ b/styles/style.css
@@ -62,3 +62,20 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+
+
+.video-container {
+    position: relative;
+    width: 100%; 
+    height: 0;
+    padding-bottom: 50%;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+}
