--- a/styles/style.css
+++ b/styles/style.css
@@ -147,3 +147,11 @@ font-weight: bolder;
     border: none;
 }
 
+/* ------Footer Link ------------*/
+.footer-link{
+    background-color: #faf6f6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+}
