--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,8 @@ header {
 
 .btn-font {
     color: white;
+    border-radius: 5px;
+    /* border-radius: 2px solid; */
 }
 
 
@@ -45,18 +47,24 @@ header {
     padding: 20px 152px 50px 148px;
 }
 
+.why-header {
+    font-size: 20px;
+    font-weight: bolder;
+}
+
 .header-line {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.why-layer{
+
+.why-layer {
     padding: 87px 87px 87px 87px;
 }
 
 /* Layer 1 */
-.layer-one{
+.layer-one {
     display: flex;
     /* padding: 87px 87px; */
     justify-content: center;
@@ -67,7 +75,7 @@ header {
 /* My Inspire Section */
 .video-container {
     position: relative;
-    width: 100%; 
+    width: 100%;
     height: 0;
     padding-bottom: 50%;
 }
@@ -76,8 +84,8 @@ header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -95,60 +103,62 @@ header {
 }
  */
 
- .footer-section {
+.footer-section {
     margin: 150px 150px 150px 150px;
     /* position: relative;  */
 }
 
 .footer-back-img {
     background-image: url('../assets/handshake.jpg');
-    background-position: center; 
-    background-size: cover; 
-    position: relative; 
+    background-position: center;
+    background-size: cover;
+    position: relative;
     width: 100%;
     height: 100%;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    flex-direction: column; 
-    padding: 20px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
 }
 
 .footer-back-img h4,
 .footer-back-img p,
 .footer-back-img input,
 .footer-back-img button {
-    text-align: center; 
-    margin-bottom: 15px; 
+    text-align: center;
+    margin-bottom: 15px;
 }
 
-.footer-back-img h4{
+.footer-back-img h4 {
     color: white;
-font-weight: bolder;
+    font-weight: bolder;
 }
 
-.footer-back-img p{
+.footer-back-img p {
     color: rgb(196, 176, 176);
-/* font-weight: bolder; */
+    /* font-weight: bolder; */
 }
 
 
 .footer-back-img input {
-    padding: 10px; 
-    width: 50%; 
+    padding: 10px;
+    width: 50%;
+    border-radius: 5px;
 }
 
 .footer-back-img button {
-    padding: 10px 20px; 
+    padding: 10px 20px;
     cursor: pointer;
     /* background-color: #007bff;  */
     color: black;
     font-weight: bolder;
     border: none;
+    border-radius: 5px;
 }
 
 /* ------Footer Link ------------*/
-.footer-link{
+.footer-link {
     background-color: #faf6f6;
     display: flex;
     align-items: center;
